--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ali-oss": "^6.16.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.0.0-beta3",
     "mitt": "^3.0.0",
